--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5"
+    "postcss": "^8.4.5",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4"
   }
 }
