--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-anchor": "^8.6.4",
+    "markdown-it-div": "^1.1.0",
     "markdown-it-attrs": "^4.1.4"
   }
 }
